--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins" sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-.header {
+header {
     z-index: 999;
     position: absolute;
     top: 0;
@@ -18,4 +18,56 @@
     align-items: center;
     padding: 15px 200px;
     transition: 0.5s ease;
+}
+
+header .brand {
+    color: #FFF;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+header .navigation {
+    position: relative;
+}
+
+header .navigation .navigation-items a{
+    position: relative;
+    color: #000;
+    font-size: 1rem;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 30px;
+    transition: 0.3s ease;
+}
+
+header .navigation .navigation-items a:before{
+    content: '';
+    position: absolute;
+    background: #000;
+    width: 0;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    transition: 0.3s ease; 
+}
+
+header .navigation .navigation-items a:hover:before{
+    width: 100%;
+}
+
+section {
+    padding: 100px 200px;
+}
+
+.home{
+    position: relative;
+    width: 100%;
+    min-width: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background: #c9baab;
+    
 }
