--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
 
 header .brand {
     color: #FFF;
-    font-size: 1.5rem;
+    font-size: 1.5em;
     font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
@@ -34,7 +34,7 @@ header .navigation {
 
 header .navigation .navigation-items a{
     position: relative;
-    color: #000;
+    color: #FFF;
     font-size: 1rem;
     font-weight: 500;
     text-decoration: none;
@@ -45,7 +45,7 @@ header .navigation .navigation-items a{
 header .navigation .navigation-items a:before{
     content: '';
     position: absolute;
-    background: #000;
+    background: #FFF;
     width: 0;
     height: 1px;
     bottom: 0;
@@ -69,5 +69,58 @@ section {
     justify-content: center;
     flex-direction: column;
     background: #c9baab;
-    
 }
+
+.home .content {
+    z-index: 888;
+    color: #FFF;
+    width: 70%;
+    margin-top: 50px;
+}
+
+.home .content h1 {
+    font-size: 4em;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    line-height: 75px;
+    margin-bottom: 40px;
+}
+
+.home .content h1 span {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.home .content p{
+    margin-bottom: 65px;
+}
+
+.home .content a{
+    background: #FFF;
+    padding: 15px 35px;
+    color: #c9baab;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-decoration: none;
+    border-radius: 10px;
+}
+
+.home .media-icons{
+    z-index: 888;
+    position: absolute;
+    right: 30px;
+    display: flex;
+    flex-direction: column;
+    transition: 0.5s ease;
+}
+
+.home .media-icons a{
+    color: #FFF;
+    font-size: 1.6em;
+}
+
+.home .media-icons a:not(:last-child){
+    margin-bottom: 20px;
+}
+
