--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header .brand {
 
 header .navigation {
     position: relative;
+    
 }
 
 header .navigation .navigation-items a{
@@ -118,9 +119,41 @@ section {
 .home .media-icons a{
     color: #FFF;
     font-size: 1.6em;
+    transition: 0.3s ease;
 }
 
 .home .media-icons a:not(:last-child){
     margin-bottom: 20px;
 }
 
+.home .media-icons a:hover{
+    transform: scale(1.3);
+}
+
+@media(max-width: 1040px){
+    header {
+        padding: 12px 20px;
+    }
+
+    section{
+        padding: 100px 20px;
+    }
+
+    .home .media-icons{
+        right: 15px;
+    }
+
+    header .navigation{
+        display: none;
+    }
+
+    .menu-btn{
+        background: url(menu.png)no-repeat;
+        background-size: 30px;
+        background-position: center;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        transform: 0.3s ease;
+    }
+}
