--- a/css/style.css
+++ b/css/style.css
@@ -144,16 +144,38 @@ section {
     }
 
     header .navigation{
-        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(1, 1, 1, 0.5);
+    }
+
+    header .navigation .navigation-items a{
+        color: #222;
+        font-size: 1.2em;
+        margin: 20px;
     }
 
     .menu-btn{
-        background: url(menu.png)no-repeat;
+        background: url(/images/menu.png)no-repeat;
         background-size: 30px;
         background-position: center;
         width: 40px;
         height: 40px;
         cursor: pointer;
-        transform: 0.3s ease;
+        transition: 0.3s ease;
+    }
+
+    .menu-btn.active{
+        z-index: 999;
+        background: url(/images/close.png)no-repeat;
+        background-size: 25px;
+        background-position: center;
+        transition: 0.3s ease;
     }
 }
