--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,10 @@ section {
     }
 
     header .navigation{
+display: none;
+    }
+
+    header .navigation.active{
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -159,6 +163,24 @@ section {
         color: #222;
         font-size: 1.2em;
         margin: 20px;
+    }
+
+    header .navigation .navigation-items a::before{
+        background: #222;
+        height: 2px;
+    }
+
+    header .navigation.active .navigation-items{
+        background: #FFF;
+        width: 600px;
+        max-width: 600px;
+        margin: 20px;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 10px;
+        box-shadow: 0 5px 25px rgb(1, 1, 1 / 20%);
     }
 
     .menu-btn{
