--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,8 @@ section {
     background: #c9baab;
 }
 
+
+
 .home .content {
     z-index: 888;
     color: #FFF;
@@ -100,8 +102,8 @@ section {
 .home .content a{
     background: #FFF;
     padding: 15px 35px;
-    color: #c9baab;
-    font-size: 1.1em;
+    color: #3c4a59;
+    font-size: 1.em;
     font-weight: 500;
     text-decoration: none;
     border-radius: 10px;
@@ -129,6 +131,46 @@ section {
 .home .media-icons a:hover{
     transform: scale(1.3);
 }
+
+.home video{
+    z-index: 000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider-navigation{
+    z-index: 888;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(80px);
+    margin-bottom: 12px;
+}
+
+.slider-navigation .nav-btn{
+    width: 12px;
+    height: 12px;
+    background: #FFF;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    transition: 0.3s ease;
+}
+
+.slider-navigation .nav-btn:not(:last-child){
+    margin-right: 20px;
+}
+
+.slider-navigation .nav-btn:hover{
+    transform: scale(1.6);
+}
+
+/* --------------------- MEDIA QUERY ---------------------*/
 
 @media(max-width: 1040px){
     header {
